--- a/stack.yaml
+++ b/stack.yaml
@@ -36,10 +36,18 @@ resolver: lts-9.17
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
 packages:
-- .
+  - .
+  - ./futility
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps: [
+  wx-0.92.3.0,
+  wxc-0.92.3.0,
+  wxcore-0.92.3.0,
+  wxdirect-0.92.3.0,
+  futility-0.1.0.0
+  ]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
